fixed spacing with my picture

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -6,7 +6,7 @@
     height: 350px;
     width: 350px;
     position: relative;
-    right: 15px;
+    right: 10px;
 }
 
 .game {
